# OpenViking

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_CN.md  CONTRIBUTING_JA.md  Dockerfile  MANIFEST.in  Makefile  README.md  README_CN.md  README_JA.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: _build.yml  api_test.yml  api_test_effect.yml  oc2ov_test.yml
benchmark/locomo/: README.md
bot/: README.md  README_CN.md
bot/docs/: vikingbot-feedback-observability-design.md  vikingbot-phase1-validation-with-openviking-server.md  vikingbot-phase2-feedback-validation-with-openviking-server.md  vikingbot-phase3-outcome-validation-with-openviking-server.md
bot/tests/: test_agent_loop_outcome.py  test_chat_functionality.py  test_gateway_startup_security.py  test_langfuse_outcome_metadata.py  test_minimax_provider.py  test_openapi_auth.py  test_outcome_evaluator.py
crates/ov_cli/: Cargo.toml  README.md
crates/ragfs/: Cargo.toml
crates/ragfs-python/: Cargo.toml
crates/ragfs-python/src/: lib.rs
deploy/helm/: README.md
docker/: openviking-console-entrypoint.sh
docs/: package.json
docs/.vitepress/: config.ts
examples/: demo_agent_memory.py  demo_memory_v3.py  ov.conf.example  ovcli.conf.example
openviking/: __init__.py  async_client.py  sync_client.py
openviking_cli/: doctor.py  exceptions.py  server_bootstrap.py  setup_wizard.py
tests/: README.md  test_code_hosting_utils.py  test_config_loader.py  test_prompt_manager.py  test_server_config_loader.py  test_session_async_commit.py  test_telemetry_runtime.py  test_upload_utils.py
(+573 files in other folders)
