[package]
name = "ragfs-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
description = "Python bindings for RAGFS - Rust AGFS filesystem"
publish = false

[lib]
name = "ragfs_python"
crate-type = ["cdylib"]

[features]
default = ["s3"]
s3 = ["ragfs/s3"]

[dependencies]
ragfs = { path = "../ragfs" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3", "abi3-py310"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
